# guardbot

./: Dockerfile  README.md  bot.db  docker-compose.yml  pyproject.toml  requirements.txt
bot/: __main__.py
bot/core/: config.py  database.py  loader.py  memory_cache.py  models.py  redis.py
bot/handlers/: events.py
bot/handlers/admin/: filters.py  logs.py  menu.py  settings.py  stats.py
bot/handlers/moderation/: messages.py
bot/keyboards/: actions.py  admin.py
bot/middlewares/: __init__.py  auth.py  chat_management.py
bot/services/: filters.py  moderation.py  punishment.py  regex_generator.py
