[tool.poetry]
name = "telegram-moderation-bot"
version = "0.1.0"
description = "Advanced Telegram Moderation Bot with Inline Admin Panel"
authors = ["Antigravity"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
sqlalchemy = "^2.0"
asyncpg = "^0.28.0"
redis = "^5.0.0"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
uvloop = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
